--- a/_config.yml
+++ b/_config.yml
@@ -51,6 +51,9 @@ nav:
   - title: Coding
     url: /Coding
 
+  - title: Basics
+    url: https://bugeun1007.tistory.com/category/Basic-Study
+
 # Category
 collections:
   category:
