--- a/_config.yml
+++ b/_config.yml
@@ -51,7 +51,7 @@ nav:
   - title: Coding
     url: /Coding
 
-  - title: Basics
+  - title: Basic
     url: https://bugeun1007.tistory.com/category/Basic-Study
 
 # Category
