--- a/_config.yml
+++ b/_config.yml
@@ -51,8 +51,8 @@ nav:
   - title: Coding
     url: /Coding
 
-  - title: Basic
-    url: https://bugeun1007.tistory.com/category/Basic-Study
+  - title: Blog
+    url: https://bugeun1007.tistory.com/
 
 # Category
 collections:
