--- a/_config.yml
+++ b/_config.yml
@@ -10,6 +10,7 @@ plugins:
   - jekyll-gist
   - jekyll-paginate
   - jekyll-seo-tag
+  - jekyll-get-json
 
 # Optimize Jekyll
 exclude:
@@ -53,9 +54,6 @@ nav:
 
   - title: Writeups
     url: https://bugeun1007.tistory.com/
-
-  - title: VR-Publications
-    url:
 
 # Category
 collections:
