--- a/_config.yml
+++ b/_config.yml
@@ -45,11 +45,8 @@ nav:
   - title: About
     url: /about
 
-  - title: Research
-    url: /archive
-
-  - title: Coding
-    url: /Coding
+  - title: Blog
+    url: https://bugeun1007.tistory.com/
 
 # Category
 collections:
