--- a/_config.yml
+++ b/_config.yml
@@ -45,7 +45,7 @@ nav:
   - title: About
     url: /about
 
-  - title: Blog
+  - title: VR-Blog
     url: https://bugeun1007.tistory.com/
 
 # Category
